...
  },
  languages: {
    current: 'English',
    label: 'Language',
    options: {
...
  gender: {
    female: 'Female',
    male: 'Male',
    other: 'Other',
  },
  navigation: {
...
      SignIn: 'Log in',
      SignUp: 'Sign up',
      ForgotPassword: 'Forgot Password',
      PasswordReset: 'Reset',
      AppInfo: 'App info',
...
    },
    management: {
      Root: 'Management',
      CompanyDetails: 'Company Details',
      RevenueAnalysis: 'Revenue analysis',
      UsageAnalysis: 'Usage Analysis',
      Locations: 'Locations',
      AddLocation: 'Add Location',
      EditLocation: 'Edit Location',
      CoolingUnits: 'Cooling Units',
      DisabledCoolingUnitsDescription: 'Add at least one location',
      CoolingUsers: 'Cooling Users',
...
      OrderDetails: '{{orderCode}}',
      KnowledgeHub: 'Knowledge Hub',
      QuitTutorial: 'Quit Tutorial',
      FAQ: 'FAQ',
      About: 'About',
      Management: 'Management',
      Tutorial: 'Tutorial',
      PayoutOptions: 'Payout options',
      PaymentMethods: 'Payment methods',
      Wallet: 'Wallet',
...
    none: 'None',
    next: 'Next',
    back: 'Back',
    search: 'Search...',
    or: 'or',
    add: 'Add',
    edit: 'Edit',
    go: 'Go!',
...
    Root: {
      welcome: 'Digitized Cold Chain For Agriculture',
      signIn: 'Sign In',
      signUpCompany: 'Sign up as ColdRoom Provider',
      signUpCoolingUser: 'Sign Up as a User',
...
        label: 'Search...',
        cancel: 'Cancel',
        ok: 'OK',
      },
      welcome: 'Welcome to coldboxstore',
...
      latestTemperature: 'The latest temperature was registered on {{date}}.',
    },
    emptyGeneral: 'At the moment, there is no available data.',
    emptyCoolingUser:
      'Items in storage will appear in the dashboard when you do at least one check-in in any room.',
...
      employeeNoBankAccount:
        "This company doesn't have a Payouts Bank Account set up that enables receiving funds for both produces and cooling fees sold in the marketplace. Set it up to allow crates in your cooling units to be listed in the marketplace.",
      addBankAccountButton: 'Add bank account details',
      addBankAccountHeader:
        "You're setting up the bank account details on behalf of {{name}}. Please insert this data carefully as you'll not be able to make changes to it afterwards.",
...
          latitude: 'Latitude',
          longitude: 'Longitude',
          country: 'Country',
          state: 'State',
          city: 'City',
...
          'After adding the user, they will receive an sms with an invitation link, where they can activate their account.',
        text: {
          gender: 'Gender',
          ma: 'Male',
          fe: 'Female',
...
        },
        headings: {
          country: 'Select a country',
          commodity: 'Select a commodity',
          currency: 'Select a currency',
...
        coolingUnitTypes: {
          FARM_GATE_STORAGE_ROOM: 'It is a storage room placed at a farm-gate',
          MARKET_STORAGE_ROOM: 'It is a storage room placed at a market',
          MOVABLE_UNIT: 'It is a movable unit (for example, a refrigerated truck)',
          OTHER: 'Other',
...
        companySellerSettings: 'Seller Settings (Company)',
        buyerSettings: 'Buyer Settings',
        details: 'Details',
      },
      ContactsSharing: {
...
        addTitle: 'Please insert your bank account information',
        editTitle: 'Your bank account information',
        addTittleForCompany: "Please insert you company's bank account information",
        editTitleForCompany: "Your company's bank account information",
        form: {
...
          accountNumberPlaceholder: 'Insert account number',
          countryLabel: 'Country',
          nigeria: 'Nigeria',
          selectBank: 'Select bank from list',
          bank: 'Bank',
          accountType: 'Account Type',
          selectAccountType: 'Select account type',
          accountTypes: {
            personal: 'Personal',
            business: 'Business',
          },
          errors: {
...
    prev: 'Previous step',
    next: 'Next',
    start: 'Start Tutorial',
    final:
      'Congratulations! You have completed the tutorial! Go back to the dashboard to start using the app.',
...
