appId: com.base.coldtivate
name: Cooling user sign up
---
- tapOn:
    text: 'SIGN UP AS A COOLING USER OR CONSUMER'
    retryTapIfNoChange: false
- assertVisible: 'Sign Up as a Cooling User or Consumer'
- tapOn: 'Country'
- assertVisible: 'Select a country'
- tapOn: 'Nigeria'
- tapOn:
    id: 'text-input-flat'
    index: 0
- inputText: '8033709222'
- 'hideKeyboard'
- tapOn:
    id: 'text-input-flat'
    index: 1
- inputText: 'Primary'
- 'hideKeyboard'
- tapOn:
    id: 'text-input-flat'
    index: 2
- inputText: 'Farmer'
- 'hideKeyboard'
- tapOn: 'Language*'
- assertVisible: 'Select a language'
- tapOn:
    text: 'English'
    index: 1
- tapOn: 'OK'
- tapOn: 'Gender*'
- assertVisible: 'Select a gender'
- tapOn:
    text: 'Male'
    index: 1
- tapOn: 'OK'
- tapOn:
    id: 'text-input-flat'
    index: 3
- inputText: 'e2ePass1'
- 'hideKeyboard'
- tapOn:
    id: 'text-input-flat'
    index: 4
- inputText: 'e2ePass1'
- 'hideKeyboard'
- tapOn:
    point: '8%,78%'
- tapOn:
    id: 'button'
- assertVisible: 'Sign In'
- assertVisible: 'LOG IN'
- tapOn: 'Forgot Password'
