appId: com.base.coldtivate
name: RE add new location
---
- runFlow: '../common/subflows/re-login.yml'
- tapOn:
    id: 'icon-button'
    index: 0
- assertVisible: 'Management'
- tapOn: 'Management'
- assertVisible: 'Details'
- assertVisible: 'Locations'
- tapOn: 'Locations'
- assertVisible: 'Locations'
- tapOn:
    id: 'icon-button'
    index: 0
- assertVisible: 'Add Location'
- tapOn:
    id: 'text-input-flat'
    index: 0
- inputText: 'E2E NEW LOCATION'
- 'hideKeyboard'
- tapOn:
    id: 'text-input-flat'
    index: 1
- inputText: '6.465422'
- 'hideKeyboard'
- tapOn:
    id: 'text-input-flat'
    index: 2
- inputText: '3.406448'
- 'hideKeyboard'
- tapOn: 'ADD'
- assertVisible: 'Locations'
- tapOn: 'Back'
- assertVisible: 'Management'
- tapOn: 'Back'
- assertVisible: 'At the moment, there is no available data.'
