appId: com.base.coldtivate
name: RE add seller banking details
---
- runFlow: '../common/subflows/re-login.yml'
- assertVisible: 'Start Tutorial'
- assertVisible: 'Quit Tutorial'
- tapOn: 'Quit Tutorial'
- assertVisible: 'Add bank account details'
- tapOn: 'Add bank account details'
- assertVisible: 'Payout options'
- assertVisible: "Please insert you company's bank account information"
- tapOn: 'Select account type'
- tapOn:
    text: 'Business'
    index: 1
- tapOn: 'OK'
- tapOn:
    id: 'text-input-flat'
    index: 1
- inputText: 'Bizz'
- 'hideKeyboard'
- tapOn:
    id: 'text-input-flat'
    index: 2
- inputText: '3121657007'
- 'hideKeyboard'
- tapOn: 'Select bank from list'
- scrollUntilVisible:
    element:
      text: 'First Bank of Nigeria'
    direction: 'DOWN'
    visibilityPercentage: 30
    speed: 30
- tapOn:
    text: 'First Bank of Nigeria'
    index: 1
- tapOn: 'OK'
- tapOn: 'SAVE'
- assertVisible: 'At the moment, there is no available data.'
